--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,8 @@ import me.shedaniel.staticmixin.tasks.MixinPatchTask
 
 plugins {
     id "java"
-    id "idea"
     id "eclipse"
     id "maven-publish"
-    id "java-gradle-plugin"
     id "org.cadixdev.licenser" version "0.6.1"
     id "com.github.johnrengelman.shadow" version "7.0.0"
     id "me.shedaniel.static-mixin" version "1.0.+"
@@ -92,6 +90,12 @@ patchingVersions.each { version ->
             exclude "META-INF/*.SF", "META-INF/*.RSA", "META-INF/*.DSA"
         }
         archiveVersion = version
+        manifest {
+            attributes 'Premain-Class': 'org.spongepowered.tools.agent.MixinAgent',
+                'Agent-Class': 'org.spongepowered.tools.agent.MixinAgent',
+                'Can-Redefine-Classes': 'true',
+                'Can-Retransform-Classes': 'true'
+        }
         group "patch"
     }
 
